[package]
name = "MyRustShell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
whoami = "1.4.1"
clap_complete = "4.3.2"
clap = { version = "4.3.11", features = ["derive"] }
crossterm = "0.22"
